fix: json-resume work title spacing with wider content

--- a/assets/css/critical/45-json-resume.css
+++ b/assets/css/critical/45-json-resume.css
@@ -13,6 +13,10 @@
     flex-flow: row wrap;
   }
 
+  .jr-work__name {
+    flex-basis: 70%;
+  }
+
   .jr__date,
   .jr__date-range,
   .jr-work__location {
